# smolagents-course-labs

./: .gitignore  README.md  STAGE-A-REPORT.md  STAGE-B-REPORT.md  conftest.py  pyproject.toml
_assets/: _gen.py  customers.csv
_assets/corpus/: revenue_policy.md
module-01/: .env.example  README.md  lab.md
module-01/quill_intro/: __init__.py  __main__.py  first_agent.py
module-01/tests/: smoke_test.py
module-02/: README.md  lab.md  pyproject.toml
module-02/quill/: __init__.py  agent.py
module-02/tests/: smoke_test.py
module-03/: README.md  lab.md  pyproject.toml
module-03/quill/: __init__.py  __main__.py  agent.py
module-03/tests/: smoke_test.py
module-04/: .env.example  README.md  lab.md  pyproject.toml
module-04/quill/: __init__.py  __main__.py  agent.py
module-04/tests/: smoke_test.py
module-05/: README.md  lab.md  pyproject.toml
module-05/quill/: __init__.py  agent.py
module-05/quill/tools/: __init__.py  data.py
module-05/tests/: smoke_test.py
module-06/: .env.example  README.md  lab.md  pyproject.toml
module-06/quill/: __init__.py  agent.py  callbacks.py
module-06/tests/: smoke_test.py
module-07/: README.md  lab.md  pyproject.toml
module-07/quill/: __init__.py  agent.py  callbacks.py  run.py
module-07/tests/: smoke_test.py
module-08/: README.md  lab.md  pyproject.toml
module-08/quill/: __init__.py  __main__.py  agent.py  report.py
module-08/tests/: smoke_test.py
module-09/: .env.example  README.md  lab.md  pyproject.toml
module-09/data/: sales.csv
module-09/quill/: agent.py  config.py  run.py
module-09/quill/demos/: __init__.py
module-09/tests/: smoke_test.py
module-10/: README.md  lab.md  pyproject.toml
module-10/quill/: __init__.py  __main__.py  agent.py  demo_sandbox.py  sandbox.py  team.py
module-10/tests/: smoke_test.py
module-11/: README.md  lab.md  pyproject.toml
module-11/quill/: __main__.py  agent.py  run.py
module-11/quill/tools/: data.py
module-11/tests/: smoke_test.py
module-12/: .env.example  README.md  lab.md  pyproject.toml
module-12/data/corpus/: metrics_glossary.md
module-12/quill/: __init__.py  bench.py  retriever.py  run.py  team.py
module-12/tests/: smoke_test.py
module-13/: .env.example  README.md  lab.md  pyproject.toml
module-13/data/: sales.db
module-13/quill/: __main__.py  agent.py  callbacks.py
module-13/quill/demos/: mcp_demo.py
module-13/quill/scripts/: build_sales_db.py
module-13/quill/tools/: data.py  mcp.py
module-13/tests/: smoke_test.py
module-14/: .env.example  README.md  lab.md  pyproject.toml
module-14/data/corpus/: segmentation.md
module-14/quill/: __main__.py  callbacks.py  publish.py  retriever.py
module-14/quill/eval/: golden_set.json  judge.py  run_evals.py
module-14/quill/eval/results/: .gitkeep
module-14/quill/scripts/: load_hub_tool.py  push_save_chart.py
module-14/tests/: smoke_test.py
module-15/: PRODUCTION-CHECKLIST.md  README.md  app.py  lab.md  pyproject.toml
module-15/data/corpus/: data_dictionary.md
module-15/quill/: __init__.py  __main__.py  agent.py  config.py  report.py  runtime.py  telemetry.py  ui.py
module-15/quill/eval/: __init__.py  run_evals.py
module-15/quill/scripts/: __init__.py
module-15/quill/tools/: __init__.py  data.py
module-15/tests/: smoke_test.py
