[project]
name = "smolagents-course-labs-module-13"
version = "0.1.0"
description = "Module 13 — Deploying Quill: wrap the agent in a GradioUI with CSV upload and reset=False multi-turn memory, push the whole agent to the Hub (save()/push_to_hub serialise agent.json + prompts.yaml + tools/ + managed_agents/ + app.py + requirements.txt) so it runs as a one-click Space, and launch it from the smolagent CLI"
requires-python = ">=3.11"
dependencies = [
  # Core: CodeAgent + default tools (ddgs>=9.0.0, markdownify>=0.14.1 from [toolkit]).
  # [litellm]/[openai] (M4) add the model swap backends.
  # [docker] (M5) adds DockerExecutor (docker>=7.1.0 + websocket-client) for real
  # isolation via executor_type="docker". Optionally add [e2b] for the E2B cloud microVM swap.
  # [mcp] (M9) adds the MCP client bridge (mcpadapt>=0.1.13 + mcp) so Quill can connect to
  # MCP tool servers via ToolCollection.from_mcp / MCPClient.
  # [vision] (M11) adds helium + selenium — the BROWSER for the OPTIONAL vision_browser
  # sub-agent. NOTE (the T11.4 trap): [vision] does NOT enable image INPUT — re-reading a chart
  # via run(images=...) needs only a VLM (a model_id via make_model/QUILL_MODEL_ID) and PIL, no
  # extra. We pull [vision] in here so the optional browser + its offline tests are reproducible.
  # [gradio] (M13) adds gradio>=5.14.0 — the GradioUI / stream_to_gradio web layer (06 §4). It is
  # what wraps Quill as a web app and what agent.push_to_hub exports as the Space app.py.
  "smolagents[toolkit,litellm,openai,docker,mcp,vision,gradio]==1.26.0",
  # huggingface_hub powers the agent-level push_to_hub / from_hub (M13), not just the model client.
  "huggingface_hub>=1.0,<2",
  # Quill's data stack — neither is a smolagents dependency, so both are added explicitly.
  # Pillow ships with the data/vision stack; it is what decodes a chart PNG to a PIL image for
  # run(images=[...]) — no extra needed for image INPUT.
  "pandas>=2.2.3",
  "matplotlib",
  # NEW (M12): the BM25 retrieval lib for the RetrieverTool's knowledge base (agentic RAG). We use
  # rank-bm25 directly — lexical, zero model, zero inference cost, deterministic — and DELIBERATELY
  # avoid the official RAG example's langchain_community.BM25Retriever to skip the LangChain
  # dependency (06 §4). Embeddings (semantic search) are a prod swap, not a required dependency.
  "rank-bm25",
  # Floors that match smolagents 1.26.0's extras (pinned for reproducibility).
  "litellm>=1.60.2",       # M4: the LiteLLM swap backend
  "openai>=1.58.1",        # M4 (optional): OpenAI-compatible servers
  "docker>=7.1.0",         # M5: Docker SDK used by DockerExecutor
  "mcpadapt>=0.1.13",      # M9: the MCP <-> smolagents Tool bridge (from [mcp])
  "helium",                # M11: browser automation for the vision_browser (from [vision])
  "selenium",              # M11: the WebDriver helium drives (Chrome) (from [vision])
  "gradio>=5.14.0",        # M13: the web UI layer (GradioUI / stream_to_gradio) (from [gradio])
  # "e2b-code-interpreter>=1.0.3",  # OPTIONAL (M5): uncomment for QUILL_EXECUTOR=e2b
  # Tests
  "pytest>=8.1.0",
]

# The OPTIONAL vision_browser needs a real local Chrome in addition to helium+selenium (install it
# on the host; it is not a pip package). `uvx` (used to launch the stdio MCP SQLite server,
# mcp-server-sqlite) ships with `uv` — it is NOT a Python package dependency, so it is not listed
# here. Extras still NOT pulled in yet: no telemetry (M14). The repo uses ONE shared venv; each
# module-NN/ is a self-contained snapshot of code + tests + data. uv.lock is committed at the repo
# root. The push to the Hub needs HF_TOKEN (.env) — never hard-code it; a pushed agent publishes
# its tool code, so embed no secret (C7).
#
# Pytest config (markers, rootdir, the shared FakeModel/fake_model fixture, and the
# live/sandbox skip policy) lives at the REPO ROOT (pyproject.toml + conftest.py). We do
# NOT add a [tool.pytest.ini_options] section here: that would make module-09/ a competing
# rootdir and stop pytest from discovering the root conftest. Run tests from the repo root.
